--- a/index.html
+++ b/index.html
@@ -15,22 +15,27 @@
     <header>
       <div class="container horizont">
         <nav class="navigate horizont">
-          <a class="logo" href="./index.html"
-            ><span class="web">Web</span>Studio</a
-          >
+          <a class="logo" href="./index.html"><span class="web">Web</span>Studio</a>
           <ul class="header-list">
-            <li><a class="header-link-first" href="./index.html">Студия</a></li>
+            <li class="line">
+              <a class="header-link" href="./index.html">Студия</a></li>
             <li>
               <a class="header-link" href="./portfolio.html">Портфолио</a>
             </li>
-            <li><a class="header-link" href="">Контакты</a></li>
+            <li>
+              <a class="header-link" href="">Контакты</a></li>
           </ul>
         </nav>
         <address class="navigate horizont">
-          <a class="header-link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
+          <a class="header-link-mail" href="mailto:info@devstudio.com">
+            <svg class="mail-svg">
+              <use href="./images/icon/icomoon/symbol-defs.svg#icon-mail"></use>
+            </svg>info@devstudio.com</a
           >
-          <a class="header-link" href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="header-link-phone" href="tel:+380961111111">
+            <svg class="phone-svg">
+              <use href="./images/icon/icomoon/symbol-defs.svg#icon-phone"></use>
+          </svg>+38 096 111 11 11</a>
         </address>
       </div>
     </header>
@@ -89,14 +94,17 @@
         <div class="container">
           <h2 class="title center">Чем мы занимаемся</h2>
           <ul class="horizont">
-            <li>
+            <li class="work-figure">
               <img src="./images/lesson1.jpg" alt="Lessons 1" width="370" />
+              <p class="text-overlap">Десктопные приложения</p>
             </li>
-            <li>
+            <li class="work-figure">
               <img src="./images/lesson2.jpg" alt="Lessons 2" width="370" />
+              <p class="text-overlap">Мобильные приложения</p>
             </li>
-            <li>
+            <li class="work-figure">
               <img src="./images/lesson3.jpg" alt="Lessons 3" width="370" />
+              <p class="text-overlap">Дизайнерские решения</p>
             </li>
           </ul>
         </div>
@@ -116,22 +124,34 @@
               />
               <h3 class="team-name">Игорь Демьяненко</h3>
               <p class="team-position">Product Designer</p>
-              <ul class="social-list">
-                <li class="social-item instagram">
-                  <a href="//www.instagram.com/">
-                    <svg>
-                      <use href="./im"></use>
+              <ul class="list-social-icons">
+                <li class="social-icons-item">
+                  <a class="social-icons-link" href="//www.instagram.com/">
+                    <svg class="social-icons-svg">
+                      <use  href="./images/icon/icomoon/symbol-defs.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-item twitter">
-                  <a href="//twitter.com/"></a>
+                <li class="social-icons-item">
+                  <a class="social-icons-link" href="//www.facebook.com/">
+                    <svg class="social-icons-svg">
+                      <use href="./images/icon/icomoon/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="social-item facebook">
-                  <a href="//www.facebook.com/"></a>
+                <li class="social-icons-item">
+                  <a class="social-icons-link" href="//www.twitter.com/">
+                    <svg class="social-icons-svg">
+                      <use href="./images/icon/icomoon/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="social-item linkedin">
-                  <a href="//www.linkedin.com/"></a>
+                <li class="social-icons-item" >
+                  <a class="social-icons-link" href="//www.linkedin.com/">
+                    <svg class="social-icons-svg">
+                      <use href="./images/icon/icomoon/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -144,18 +164,34 @@
               />
               <h3 class="team-name">Ольга Репина</h3>
               <p class="team-position">Frontend Developer</p>
-              <ul class="social-list">
-                <li class="social-item instagram">
-                  <a href="//www.instagram.com/"></a>
+              <ul class="list-social-icons">
+                <li class="social-icons-item">
+                  <a class="social-icons-link" href="//www.instagram.com/">
+                    <svg class="social-icons-svg">
+                      <use  href="./images/icon/icomoon/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="social-item twitter">
-                  <a href="//twitter.com/"></a>
+                <li class="social-icons-item">
+                  <a class="social-icons-link" href="//www.facebook.com/">
+                    <svg class="social-icons-svg">
+                      <use href="./images/icon/icomoon/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="social-item facebook">
-                  <a href="//www.facebook.com/"></a>
+                <li class="social-icons-item">
+                  <a class="social-icons-link" href="//www.twitter.com/">
+                    <svg class="social-icons-svg">
+                      <use href="./images/icon/icomoon/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="social-item linkedin">
-                  <a href="//www.linkedin.com/"></a>
+                <li class="social-icons-item" >
+                  <a class="social-icons-link" href="//www.linkedin.com/">
+                    <svg class="social-icons-svg">
+                      <use href="./images/icon/icomoon/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -168,18 +204,34 @@
               />
               <h3 class="team-name">Николай Тарасов</h3>
               <p class="team-position">Marketing</p>
-              <ul class="social-list">
-                <li class="social-item instagram">
-                  <a href="//www.instagram.com/"></a>
+              <ul class="list-social-icons">
+                <li class="social-icons-item">
+                  <a class="social-icons-link" href="//www.instagram.com/">
+                    <svg class="social-icons-svg">
+                      <use  href="./images/icon/icomoon/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="social-item twitter">
-                  <a href="//twitter.com/"></a>
+                <li class="social-icons-item">
+                  <a class="social-icons-link" href="//www.facebook.com/">
+                    <svg class="social-icons-svg">
+                      <use href="./images/icon/icomoon/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="social-item facebook">
-                  <a href="//www.facebook.com/"></a>
+                <li class="social-icons-item">
+                  <a class="social-icons-link" href="//www.twitter.com/">
+                    <svg class="social-icons-svg">
+                      <use href="./images/icon/icomoon/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="social-item linkedin">
-                  <a href="//www.linkedin.com/"></a>
+                <li class="social-icons-item" >
+                  <a class="social-icons-link" href="//www.linkedin.com/">
+                    <svg class="social-icons-svg">
+                      <use href="./images/icon/icomoon/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -192,18 +244,34 @@
               />
               <h3 class="team-name">Михаил Ермаков</h3>
               <p class="team-position">UI Designer</p>
-              <ul class="social-list">
-                <li class="social-item instagram">
-                  <a href="//www.instagram.com/"></a>
+              <ul class="list-social-icons">
+                <li class="social-icons-item">
+                  <a class="social-icons-link" href="//www.instagram.com/">
+                    <svg class="social-icons-svg">
+                      <use  href="./images/icon/icomoon/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="social-item twitter">
-                  <a href="//twitter.com/"></a>
+                <li class="social-icons-item">
+                  <a class="social-icons-link" href="//www.facebook.com/">
+                    <svg class="social-icons-svg">
+                      <use href="./images/icon/icomoon/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="social-item facebook">
-                  <a href="//www.facebook.com/"></a>
+                <li class="social-icons-item">
+                  <a class="social-icons-link" href="//www.twitter.com/">
+                    <svg class="social-icons-svg">
+                      <use href="./images/icon/icomoon/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="social-item linkedin">
-                  <a href="//www.linkedin.com/"></a>
+                <li class="social-icons-item" >
+                  <a class="social-icons-link" href="//www.linkedin.com/">
+                    <svg class="social-icons-svg">
+                      <use href="./images/icon/icomoon/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -212,16 +280,40 @@
       </section>
 
       <!-- Постоянные клиенты -->
-      <section>
+      <section class="clients">
         <div class="container">
           <h2 class="title center">Постоянные клиенты</h2>
           <ul class="clients-list">
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li class="clients-item"><a class="clients-link" href="">
+              <svg class="clients-icons-svg">
+                <use href="./images/icon/icomoon/symbol-defs.svg#icon-client-1"></use>
+              </svg>
+            </a></li>
+            <li class="clients-item"><a class="clients-link" href="">
+              <svg class="clients-icons-svg">
+                <use  href="./images/icon/icomoon/symbol-defs.svg#icon-client-2"></use>
+              </svg>
+            </a></li>
+            <li class="clients-item"><a class="clients-link" href="">
+              <svg class="clients-icons-svg">
+                <use href="./images/icon/icomoon/symbol-defs.svg#icon-client-3"></use>
+              </svg>
+            </a></li>
+            <li class="clients-item"><a class="clients-link" href="">
+              <svg class="clients-icons-svg">
+                <use  href="./images/icon/icomoon/symbol-defs.svg#icon-client-4"></use>
+              </svg>
+            </a></li>
+            <li class="clients-item"><a class="clients-link" href="">
+              <svg class="clients-icons-svg">
+                <use  href="./images/icon/icomoon/symbol-defs.svg#icon-client-5"></use>
+              </svg>
+            </a></li>
+            <li class="clients-item"><a class="clients-link" href="">
+              <svg class="clients-icons-svg">
+                <use  href="./images/icon/icomoon/symbol-defs.svg#icon-client-6"></use>
+              </svg>
+            </a></li>
           </ul>
         </div>
       </section>
@@ -229,18 +321,53 @@
 
     <!-- Футер -->
     <footer>
-      <div class="container center">
-        <a class="logo footer-logo" href="./index.html"
-          ><span class="web">Web</span><span class="studio">Studio</span></a
-        >
-        <h2 class="visually-hidden">Контакты</h2>
-        <address class="address">
-          г. Киев, пр-т Леси Украинки, 26<br />
-          <a class="address-link mail-footer" href="mailto:info@example.com"
-            >info@example.com</a
-          ><br />
-          <a class="address-link" href="tel:+380991111111">+38 099 111 11 11</a>
-        </address>
+      <div class="container footer-flex">
+        <section>
+          <a class="logo footer-logo" href="./index.html"
+            ><span class="web">Web</span><span class="studio">Studio</span></a
+          >
+          <h2 class="visually-hidden">Контакты</h2>
+          <address class="address">
+            г. Киев, пр-т Леси Украинки, 26<br />
+            <a class="address-link mail-footer" href="mailto:info@example.com"
+              >info@example.com</a
+            ><br />
+            <a class="address-link" href="tel:+380991111111">+38 099 111 11 11</a>
+          </address>
+        </section>
+        <section class="welcome">
+          <h2 class="footer-title">Присоединяйтесь</h2>
+          <ul class="footer-social-icons">
+            <li class="social-icons-item">
+              <a class="bg-social" href="//www.instagram.com/">
+                <svg class="social-footer-svg">
+                  <use  href="./images/icon/icomoon/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-icons-item">
+              <a class="bg-social" href="//www.facebook.com/">
+                <svg class="social-footer-svg">
+                  <use href="./images/icon/icomoon/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-icons-item">
+              <a class="bg-social" href="//www.twitter.com/">
+                <svg class="social-footer-svg">
+                  <use href="./images/icon/icomoon/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-icons-item" >
+              <a class="bg-social" href="//www.linkedin.com/">
+                <svg class="social-footer-svg">
+                  <use href="./images/icon/icomoon/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </section>
       </div>
     </footer>
   </body>
