--- a/portfolio.html
+++ b/portfolio.html
@@ -19,9 +19,9 @@
             ><span class="web">Web</span>Studio</a
           >
           <ul class="header-list">
-            <li class="line">
-              <a class="header-link" href="./index.html">Студия</a></li>
             <li>
+              <a class="header-link" href="./index.html">Студия</a></li>
+            <li class="line-portfolio">
               <a class="header-link" href="./portfolio.html">Портфолио</a>
             </li>
             <li>
@@ -66,12 +66,17 @@
           </ul>
           <ul class="portfolio">
             <li class="portfolio-item portfolio-bottom ">
-              <a class="portfolio-link shadow" href=""
-                ><img
-                  src="./images-portfolio/portfolio1.jpg"
-                  alt="Portfolio1"
-                  width="370"
-                />
+              <a class="portfolio-link shadow" href="">
+                <div class="portfolio-div-overlap">
+                  <img
+                    src="./images-portfolio/portfolio1.jpg"
+                    alt="Portfolio1"
+                    width="370"
+                  />
+                  <p class="portfolio-overlap">
+                    Технокряк это современная площадка распостранения короновируса. Компания использует эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. 
+                  </p>
+                </div>  
                 <div class="portfolio-name">
                   <h2 class="projects-title">Технокряк</h2>
                   <p class="projects-kind">Веб-сайт</p>
@@ -80,11 +85,16 @@
             </li>
             <li class="portfolio-item portfolio-bottom">
               <a class="portfolio-link shadow" href="">
-                <img
-                  src="./images-portfolio/portfolio2.jpg"
-                  alt="Portfolio2"
-                  width="370"
-                />
+                <div class="portfolio-div-overlap">
+                  <img
+                    src="./images-portfolio/portfolio2.jpg"
+                    alt="Portfolio2"
+                    width="370"
+                  />
+                  <p class="portfolio-overlap">
+                      Технокряк это современная площадка распостранения короновируса. Компания использует эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. 
+                  </p>
+                </div>
                 <div class="portfolio-name">
                   <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
                   <p class="projects-kind">Дизайн</p>
@@ -93,11 +103,16 @@
             </li>
             <li class="portfolio-item portfolio-bottom">
               <a class="portfolio-link shadow" href="">
-                <img
-                  src="./images-portfolio/portfolio3.jpg"
-                  alt="Portfolio3"
-                  width="370"
-                />
+                <div class="portfolio-div-overlap">
+                  <img
+                    src="./images-portfolio/portfolio3.jpg"
+                    alt="Portfolio3"
+                    width="370"
+                  />
+                  <p class="portfolio-overlap">
+                      Технокряк это современная площадка распостранения короновируса. Компания использует эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. 
+                  </p>
+                </div>
                 <div class="portfolio-name">
                   <h2 class="projects-title">Ресторан Seafood</h2>
                   <p class="projects-kind">Приложение</p>
@@ -106,11 +121,16 @@
             </li>
             <li class="portfolio-item portfolio-bottom">
               <a class="portfolio-link shadow" href="">
-                <img
-                  src="./images-portfolio/portfolio4.jpg"
-                  alt="Portfolio4"
-                  width="370"
-                />
+                <div class="portfolio-div-overlap">
+                  <img
+                    src="./images-portfolio/portfolio4.jpg"
+                    alt="Portfolio4"
+                    width="370"
+                  />
+                  <p class="portfolio-overlap">
+                      Технокряк это современная площадка распостранения короновируса. Компания использует эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. 
+                  </p>
+                </div>
                 <div class="portfolio-name">
                   <h2 class="projects-title">Проект Prime</h2>
                   <p class="projects-kind">Маркетинг</p>
@@ -119,11 +139,16 @@
             </li>
             <li class="portfolio-item portfolio-bottom">
               <a class="portfolio-link shadow" href="">
-                <img
-                  src="./images-portfolio/portfolio5.jpg"
-                  alt="Portfolio5"
-                  width="370"
-                />
+                <div class="portfolio-div-overlap">
+                  <img
+                    src="./images-portfolio/portfolio5.jpg"
+                    alt="Portfolio5"
+                    width="370"
+                  />
+                  <p class="portfolio-overlap">
+                      Технокряк это современная площадка распостранения короновируса. Компания использует эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. 
+                  </p>
+                </div>
                 <div class="portfolio-name">
                   <h2 class="projects-title">Проект Boxes</h2>
                   <p class="projects-kind">Приложение</p>
@@ -132,11 +157,16 @@
             </li>
             <li class="portfolio-item portfolio-bottom">
               <a class="portfolio-link shadow" href="">
-                <img
-                  src="./images-portfolio/portfolio6.jpg"
-                  alt="Portfolio6"
-                  width="370"
-                />
+                <div class="portfolio-div-overlap">
+                  <img
+                    src="./images-portfolio/portfolio6.jpg"
+                    alt="Portfolio6"
+                    width="370"
+                  />
+                  <p class="portfolio-overlap">
+                      Технокряк это современная площадка распостранения короновируса. Компания использует эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. 
+                  </p>
+                </div>
                 <div class="portfolio-name">
                   <h2 class="projects-title">Inspiration has no Borders</h2>
                   <p class="projects-kind">Веб-сайт</p>
@@ -145,11 +175,16 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link shadow" href="">
-                <img
-                  src="./images-portfolio/portfolio7.jpg"
-                  alt="Portfolio7"
-                  width="370"
-                />
+                <div class="portfolio-div-overlap">
+                  <img
+                    src="./images-portfolio/portfolio7.jpg"
+                    alt="Portfolio7"
+                    width="370"
+                  />
+                  <p class="portfolio-overlap">
+                      Технокряк это современная площадка распостранения короновируса. Компания использует эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. 
+                  </p>
+                </div>
                 <div class="portfolio-name">
                   <h2 class="projects-title">Издание Limited Edition</h2>
                   <p class="projects-kind">Дизайн</p>
@@ -158,11 +193,16 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link shadow" href="">
-                <img
-                  src="./images-portfolio/portfolio8.jpg"
-                  alt="Portfolio8"
-                  width="370"
-                />
+                <div class="portfolio-div-overlap">
+                  <img
+                    src="./images-portfolio/portfolio8.jpg"
+                    alt="Portfolio8"
+                    width="370"
+                  />
+                  <p class="portfolio-overlap">
+                      Технокряк это современная площадка распостранения короновируса. Компания использует эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. 
+                  </p>
+                </div>
                 <div class="portfolio-name">
                   <h2 class="projects-title">Проект LAB</h2>
                   <p class="projects-kind">Маркетинг</p>
@@ -171,11 +211,16 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link shadow" href="">
-                <img
-                  src="./images-portfolio/portfolio9.jpg"
-                  alt="Portfolio9"
-                  width="370"
-                />
+                <div class="portfolio-div-overlap">
+                  <img
+                    src="./images-portfolio/portfolio9.jpg"
+                    alt="Portfolio9"
+                    width="370"
+                  />
+                  <p class="portfolio-overlap">
+                      Технокряк это современная площадка распостранения короновируса. Компания использует эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. 
+                  </p>
+                </div>
                 <div class="portfolio-name">
                   <h2 class="projects-title">Growing Business</h2>
                   <p class="projects-kind">Приложение</p>
