--- a/index.html
+++ b/index.html
@@ -379,6 +379,6 @@
         </section>
       </div>
     </footer>
-    <script src="../js/modal.js"></script>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
